5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4001/executions/1791_3136.log
== TEST (2019-05-29 14:38:04) 
-- CODE:
from numpy import*
n = array(eval(input("Vetor: ")))
i = 0 #contadora
v = 0 #acumuladora
while (i < size(n)):
	M = exp(log(v + 1)/n)
	i = i + 1
	v = v + 1
M = M - 1
print(round(M, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:38:43) 
-- CODE:
from numpy import*
n = array(eval(input("Vetor: ")))
i = 0 #contadora
v = 0 #acumuladora
M = 0
while (i < size(n)):
	M = exp(log(v + 1)/n)
	i = i + 1
	v = v + 1
M = M - 1
print(round(M, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:39:30) 
-- CODE:
from numpy import*
n = array(eval(input("Vetor: ")))
i = 0 #contadora
v = 0 #acumuladora
m = 0
while (i < size(n)):
	m = exp(log(v + 1)/n)
	i = i + 1
	v = v + 1
m = m - 1
print(round(m, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:39:52) 
-- CODE:
from numpy import*
n = int(array(eval(input("Vetor: "))))
i = 0 #contadora
v = 0 #acumuladora
m = 0
while (i < size(n)):
	m = exp(log(v + 1)/n)
	i = i + 1
	v = v + 1
m = m - 1
print(round(m, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:40:31) 
-- CODE:
from numpy import*
n = array(eval(input("Vetor: ")))
i = 0 #contadora
v = 0 #acumuladora
m = 0
while (i < size(n)):
	m = exp(log(v + 1)/n)
	i = i + 1
	v = v + 1
m = m - 1
print(round(m, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:40:52) 
-- CODE:
from numpy import*
n = array(eval(input("Vetor: ")))
i = 0 #contadora
v = 0 #acumuladora
m = 0
while (i < size(n)):
	m = exp(log(v + 1)/n)
	i = i + 1
	v = v + 1
m = m - 1
print(round(m, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:41:50) 
-- CODE:
from numpy import*
n = array(eval(input("Vetor: ")))
i = 0 #contadora
v = 0 #acumuladora
m = 0
while (i < size(n)):
	m = exp(log(v + 1)/n)
	i = i + 1
	v = v + 1
m = m - 1
print(round(m, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:44:34) 
-- CODE:
from numpy import*
n = array(eval(input("Vetor: ")))
i = 0 #contadora
v = 0 #acumuladora
m = 0
while (i < size(n)):
	m = exp(log(n[i] + 1/sum(n))
	i = i + 1
	v = v + 1
m = m - 1
print(round(m, 2))
	
-- ERROR:
File "XXXX", line 8
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:45:00) 
-- CODE:
from numpy import*
n = array(eval(input("Vetor: ")))
i = 0 #contadora
v = 0 #acumuladora
m = 0
while (i < size(n)):
	m = exp(log(v + 1)/n)
	i = i + 1
	v = v + 1
m = m - 1
print(round(m, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:50:49) 
-- CODE:
from numpy import*
n = array(eval(input("Vetor: ")))
i = 0 #contadora
v = 0 #acumuladora
m = 0
while (i < size(n)):
	m = exp(log(v + 1)/sum(n))
	i = i + 1
	v = v + 1
m = m - 1
print(round(m, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:51:18) 
-- CODE:
from numpy import*
n = array(eval(input("Vetor: ")))
i = 0 #contadora
v = 0 #acumuladora
m = 0
while (i < size(n)):
	m = exp(log(v + 1)/sum(n)) - 1
	i = i + 1
	v = v + 1
print(round(m, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:51:49) 
-- CODE:
from numpy import*
n = array(eval(input("Vetor: ")))
i = 0 #contadora
v = 0 #acumuladora
m = 0
while (i < size(n)):
	m = exp(log(n[i] + 1)/sum(n)) - 1
	i = i + 1
	v = v + 1
print(round(m, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:51:58) 
-- CODE:
from numpy import*
n = array(eval(input("Vetor: ")))
i = 0 #contadora
v = 0 #acumuladora
m = 0
while (i < size(n)):
	m = exp(log(n[i] + 1)/sum(n)) 
	i = i + 1
	v = v + 1
m = m - 1
print(round(m, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:52:16) 
-- CODE:
from numpy import*
n = array(eval(input("Vetor: ")))
i = 0 #contadora
v = 0 #acumuladora
m = 0
while (i < size(n)):
	m = exp(log(n[i] + 1)/sum(n)) - 1
	i = i + 1
	v = v + 1

print(round(m, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:53:46) 
-- CODE:
from numpy import*
n = array(eval(input("Vetor: ")))
i = 0 #contadora
v = 0 #acumuladora
m = 0
while (i < size(n)):
	m = exp(log(n[i] + 1))
	i = i + 1
m = (m / sum(n)) - 1 

print(round(m, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:55:06) 
-- CODE:
from numpy import*
n = array(eval(input("Vetor: ")))
i = 0 #contadora
v = 0 #acumuladora
m = 0
while (i < size(n)):
	m = exp(log(v + 1))
	i = i + 1
	v = v + 1
m = (m / sum(n)) - 1 

print(round(m, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:56:51) 
-- CODE:
from numpy import*
n = array(eval(input("Vetor: ")))
i = 0 #contadora
v = 0 #acumuladora
m = 0
while (i < size(n)):
	m = exp(log(n[i] + 1)) - 1 
	i = i + 1
	v = v + 1
m = (m / sum(n)) 
print(round(m, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:57:26) 
-- CODE:
from numpy import*
n = array(eval(input("Vetor: ")))
i = 0 #contadora
v = 0 #acumuladora
m = 0
while (i < size(n)):
	m = exp(log(n[i] + 1)) - 1 
	i = i + 1
	v = v + 1
m = (m / size(n)) 
print(round(m, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:58:36) 
-- CODE:
from numpy import*
n = array(eval(input("Vetor: ")))
i = 0 #contadora
v = 0 #acumuladora
m = 0
while (i < size(n)):
	m = exp(log(n[i] + 1)) - 1 
	i = i + 1
(m / size(n)) 
print(round((m/size), 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:59:03) 
-- CODE:
from numpy import*
n = array(eval(input("Vetor: ")))
i = 0 #contadora
v = 0 #acumuladora
m = 0
while (i < size(n)):
	m = exp(log(n[i] + 1)) - 1 
	i = i + 1
h = (m / size(n)) 
print(round(h, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:00:02) 
-- CODE:
from numpy import*
n = array(eval(input("Vetor: ")))
i = 0 #contadora
v = 0 #acumuladora
m = 0
while (i < size(n)):
	m = log(n[i] + 1) 
	i = i + 1
h = exp(m / size(n)) - 1
print(round(h, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:02:49) 
-- CODE:
from numpy import*
n = array(eval(input("Vetor: ")))
i = 0 #contadora
v = 0 #acumuladora
h = 0
while (i < size(n)):
	h = h + log(n[i] + 1) 
	i = i + 1
m = exp(h / size(n)) - 1
print(round(m, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:02:56) 
-- CODE:
from numpy import*
n = array(eval(input("Vetor: ")))
i = 0 #contadora
v = 0 #acumuladora
h = 0
while (i < size(n)):
	h = h + log(n[i] + 1) 
	i = i + 1
m = exp(h / size(n)) - 1
print(round(m, 2))
	
-- EXECUTION TIME:
0.394966
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.53
---- user output:
4.53
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.44
---- user output:
3.44
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.84
---- user output:
2.84
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
